--- a/modus/package.json
+++ b/modus/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@trimble-oss/trimble-id-react": "^1.0.0",
     "highlight.js": "^11.11.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
+    "vscode": "^1.1.37"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
