--- a/modus/tsconfig.app.json
+++ b/modus/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "../Redundant/routers", "../Redundant/pages"]
 }
