--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       {
         "command": "moduscoder.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "moduscoder.authenticate",
+        "title": "Authenticate"
       }
     ],
     "viewsContainers": {
@@ -50,8 +54,10 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/randomstring": "^1.3.0",
     "@types/vscode": "^1.98.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
@@ -59,5 +65,11 @@
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.19.0",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@trimble-oss/trimble-id-react": "^1.0.0",
+    "crypto-js": "^4.2.0",
+    "randomstring": "^1.3.1",
+    "uuid": "^11.1.0"
   }
 }
