--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moduscoder",
-  "displayName": "ModusCoder",
+  "displayName": "Modus Coder",
   "description": "Modus Coder as VS code extension",
   "version": "0.0.1",
   "engines": {
@@ -26,8 +26,8 @@
       "activitybar": [
         {
           "id": "moduscoder-sidebar-container",
-          "title": "ModusCoder",
-          "icon": "./src/media/modus_coder_logo.png"
+          "title": "Modus Coder",
+          "icon": "./src/media/vslogo.png"
         }
       ]
     },
@@ -36,8 +36,8 @@
         {
           "type": "webview",
           "id": "moduscoder-sidebar",
-          "name": "VS code version",
-          "icon": "./src/media/modus_coder_logo.png"
+          "name": "",
+          "icon": "./src/media/vslogo.png"
         }
       ]
     }
