--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
   "contributes": {
     "commands": [
       {
-        "command": "moduscoder.helloWorld",
-        "title": "Hello World"
-      },
-      {
         "command": "moduscoder.authenticate",
         "title": "Authenticate"
       }
@@ -36,7 +32,7 @@
         {
           "type": "webview",
           "id": "moduscoder-sidebar",
-          "name": "",
+          "name": "Modus",
           "icon": "./src/media/vslogo.png"
         }
       ]
@@ -58,7 +54,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/randomstring": "^1.3.0",
-    "@types/vscode": "^1.98.0",
+    "@types/vscode": "^1.99.1",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vscode/test-cli": "^0.0.10",
@@ -68,6 +64,7 @@
   },
   "dependencies": {
     "@trimble-oss/trimble-id-react": "^1.0.0",
+    "@vscode/codicons": "^0.0.36",
     "crypto-js": "^4.2.0",
     "randomstring": "^1.3.1",
     "uuid": "^11.1.0"
