--- a/modus/package.json
+++ b/modus/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "react-tooltip": "^5.28.1",
     "vscode": "^1.1.37"
   },
   "devDependencies": {
