Done code review

--- a/modus/src/.env
+++ b/modus/src/.env
@@ -1,5 +1,1 @@
-VITE_CONFIGURATION_ENDPOINT="https://id.trimble.com/.well-known/openid-configuration"
-VITE_CLIENT_ID="d9d21ed0-14e7-4887-ba4b-d12ac2f2f466"
-VITE_REDIRECT_URL="http://localhost:4200/authenticated"
-VITE_LOGOUT_REDIRECT_URL="http://localhost:4200/authentication"
-VITE_SCOPES='TDAAS'
+REACT_APP_USER_INFO_URL="https://id.trimble.com/oauth/userinfo"
