--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@trimble-oss/trimble-id-react": "^1.0.0",
     "@vscode/codicons": "^0.0.36",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.5.0",
     "randomstring": "^1.3.1",
     "uuid": "^11.1.0"
   }
