--- a/modus/package.json
+++ b/modus/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@trimble-oss/trimble-id-react": "^1.0.0",
     "@vscode/codicons": "^0.0.36",
+    "dotenv": "^16.5.0",
     "highlight.js": "^11.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
