--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moduscoder",
   "displayName": "Modus Coder",
   "description": "Modus Coder as VS code extension",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.99.0"
   },
@@ -40,6 +40,7 @@
   },
   "scripts": {
     "install:all": "npm install && cd modus && npm install",
+    "bundle": "esbuild src/extension.ts --bundle --outfile=out/extension.js --platform=node --external:vscode --minify",
     "start:webview": "cd modus && npm run start",
     "build:webview": "cd modus && npm run build",
     "vscode:prepublish": "npm run compile",
@@ -59,6 +60,7 @@
     "@typescript-eslint/parser": "^8.22.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.25.2",
     "eslint": "^9.19.0",
     "typescript": "^5.8.2"
   },
