--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/randomstring": "^1.3.0",
-    "@types/vscode": "^1.99.1",
+    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vscode/test-cli": "^0.0.10",
@@ -68,6 +68,7 @@
     "@trimble-oss/trimble-id-react": "^1.0.0",
     "@vscode/codicons": "^0.0.36",
     "crypto-js": "^4.2.0",
+    "detect-port": "^2.1.0",
     "dotenv": "^16.5.0",
     "randomstring": "^1.3.1",
     "uuid": "^11.1.0"
